feature: support cosmos, add keplr wallet

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@keplr-wallet/types": "^0.12.130",
     "@keystonehq/animated-qr": "^0.8.6",
     "@keystonehq/keystone-sdk": "^0.4.1",
     "@keystonehq/sdk": "0.21.3",
