--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@keplr-wallet/types": "^0.12.130",
     "@keystonehq/animated-qr": "^0.8.6",
     "@keystonehq/keystone-sdk": "^0.4.1",
@@ -26,9 +27,9 @@
     "@scure/bip32": "^1.4.0",
     "bitcoinjs-lib": "^6.1.5",
     "events": "^3.3.0",
+    "long": "^5.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "tiny-secp256k1": "^2.2.3"
+    "react-dom": "^18"
   },
   "peerDependencies": {
     "react": "^18",
@@ -61,9 +62,10 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
-    "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.3.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
+  },
+  "resolutions": {
+    "long": "^5.2.3"
   }
 }
