--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
   },
   "peerDependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@bitcoinerlab/secp256k1": "^1.1.1",
+    "@cosmjs/stargate": "^0.32.4",
+    "@keplr-wallet/types": "^0.12.130",
+    "@keystonehq/animated-qr": "^0.8.6",
+    "@keystonehq/keystone-sdk": "^0.4.1",
+    "@keystonehq/sdk": "0.21.3",
+    "@scure/bip32": "^1.4.0",
+    "bitcoinjs-lib": "^6.1.5"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
