--- a/package.json
+++ b/package.json
@@ -16,27 +16,15 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "tsc && vite build",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "events": "^3.3.0",
     "long": "^5.2.3"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "@bitcoinerlab/secp256k1": "^1.1.1",
-    "@cosmjs/stargate": "^0.32.4",
-    "@keplr-wallet/types": "^0.12.130",
-    "@keystonehq/animated-qr": "^0.8.6",
-    "@keystonehq/keystone-sdk": "^0.4.1",
-    "@keystonehq/sdk": "0.21.3",
-    "@scure/bip32": "^1.4.0",
-    "bitcoinjs-lib": "^6.1.5"
-  },
-  "devDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@cosmjs/stargate": "^0.32.4",
     "@keplr-wallet/types": "^0.12.130",
@@ -45,7 +33,18 @@
     "@keystonehq/sdk": "0.21.3",
     "@scure/bip32": "^1.4.0",
     "bitcoinjs-lib": "^6.1.5",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
+    "@cosmjs/stargate": "^0.32.4",
+    "@keplr-wallet/types": "^0.12.130",
+    "@keystonehq/animated-qr": "^0.8.6",
+    "@keystonehq/keystone-sdk": "^0.4.1",
+    "@keystonehq/sdk": "0.21.3",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@scure/bip32": "^1.4.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
     "@types/node": "^20.12.12",
@@ -54,9 +53,11 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "@vitest/coverage-v8": "2.1.4",
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.19",
     "bignumber.js": "^9.1.2",
+    "bitcoinjs-lib": "^6.1.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -66,13 +67,15 @@
     "happy-dom": "^12.10.3",
     "postcss": "^8.4.38",
     "prettier": "3.1.1",
+    "react": "^18",
+    "react-dom": "^18",
     "rollup-plugin-typescript-paths": "^1.3.0",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^2.1.4"
   },
   "resolutions": {
     "long": "^5.2.3"
