--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@scure/bip32": "^1.4.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
+    "@tomo-inc/wallet-connect-sdk": "^0.3.3",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -58,6 +59,7 @@
     "autoprefixer": "^10.4.19",
     "bignumber.js": "^9.1.2",
     "bitcoinjs-lib": "^6.1.5",
+    "buffer": "^6.0.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
