--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18",
     "react-dom": "^18",
     "rollup-plugin-typescript-paths": "^1.3.0",
+    "starknet": "^6.11.0",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
