--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@cosmjs/stargate": "^0.32.4",
     "@keplr-wallet/types": "^0.12.130",
-    "@keystonehq/animated-qr": "^0.8.6",
-    "@keystonehq/keystone-sdk": "^0.4.1",
-    "@keystonehq/sdk": "0.21.3",
+    "@keystonehq/animated-qr": "0.10.0",
+    "@keystonehq/keystone-sdk": "0.9.0",
+    "@keystonehq/sdk": "0.22.1",
     "@scure/bip32": "^1.4.0",
     "bitcoinjs-lib": "^6.1.5",
     "react": "^18",
@@ -41,9 +41,9 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@cosmjs/stargate": "^0.32.4",
     "@keplr-wallet/types": "^0.12.130",
-    "@keystonehq/animated-qr": "^0.8.6",
-    "@keystonehq/keystone-sdk": "^0.4.1",
-    "@keystonehq/sdk": "0.21.3",
+    "@keystonehq/animated-qr": "0.10.0",
+    "@keystonehq/keystone-sdk": "0.9.0",
+    "@keystonehq/sdk": "0.22.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@scure/bip32": "^1.4.0",
     "@testing-library/jest-dom": "^6.4.5",
