--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@keplr-wallet/proto-types": "^0.12.216",
     "@keplr-wallet/provider-extension": "^0.12.220",
+    "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "jsontokens": "^4.0.1",
@@ -37,8 +38,8 @@
     "@keystonehq/sdk": "0.22.1",
     "@scure/bip32": "^1.4.0",
     "bitcoinjs-lib": "^6.1.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@bitcoinerlab/secp256k1": "^1.1.1",
@@ -53,8 +54,8 @@
     "@testing-library/react": "^14.3.1",
     "@tomo-inc/wallet-connect-sdk": "^0.3.19",
     "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
@@ -72,8 +73,6 @@
     "happy-dom": "^12.10.3",
     "postcss": "^8.4.38",
     "prettier": "3.1.1",
-    "react": "^18",
-    "react-dom": "^18",
     "rollup-plugin-typescript-paths": "^1.3.0",
     "starknet": "^6.11.0",
     "stream-browserify": "^3.0.0",
